tests/transpiler/x/zig/for_map_collection.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/for_map_collection.zig:6:10: error: type 'hash_map.HashMap([]const u8,i64,hash_map.StringContext,80)' is not indexable and not a range
    for (m) |k| {
         ^
/workspace/mochi/tests/transpiler/x/zig/for_map_collection.zig:6:10: note: for loop operand must be a range, array, slice, tuple, or vector
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
